adds categories to orgs

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,11 +1,6 @@
 <div class="organizations list-view line clearfix" id="organizations">
   <div class="p-nav size1of5">
-    <%#= render 'organizations/includes/subnavigation'%>
-    <ul>
-      <li>
-        <%=link_to "Öne Çıkan Kurumlar", :all_organizations, :class=>"selected"%>
-      </li>
-    </ul>
+    <%= render 'organizations/includes/subnavigation'%>
   </div><!-- subnav -->
   <div class="p-content size4of5 lastUnit">
     <div class="p-inner">
