--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,7 @@
 <%=render :partial => "list_projects",
   :locals => {
-    :projects => @projects
+    :projects => @projects,
+    :title => @tag
   }%>
 
 
