moves typekit to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,10 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
 
+  <!-- TypeKit - Styla -->
+  <script type="text/javascript" src="http://use.typekit.com/tza2afe.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
   <!-- http://code.google.com/apis/analytics/docs/tracking/asyncUsageGuide.html#SplitSnippet -->
   <script type="text/javascript">
     var _gaq = _gaq || [];
