added indextank logo (we should've done this before anyways :/

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -12,6 +12,7 @@
       </div>
 
     </div>
+    <a href="http://indextank.com/?utm_campaign=poweredby" name="Powered-by Indextank" rel="friend"><img src="http://indextank.com/_static/images/poweredby/idt-badge-md.png" alt="IndexTank: hosted search you control"/></a>
   </div>
 </div>
 
