--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -66,7 +66,7 @@
 
 <div id="main-content">
   <div id="home-stats">
-    <% if @project.pages.count > 0 %>
+    <% if @top_pages.length > 0 %>
 
       <%=render :partial => "pages/list_pages_condensed",
         :locals => {
